-Fixed override config file for inline mode

--- a/config/msg_def_overrides.yaml
+++ b/config/msg_def_overrides.yaml
@@ -1,5 +1,8 @@
 modules:
   core:
+    #NOTE: An Elf file is required at least at the parent module when configuring overrides.
+    elf_files:
+      - ../../airliner/build/tutorial/cfs/target/target/exe/airliner
     modules:
       cfe:
         modules:
