--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,6 +20,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r src/requirements.txt
+          apt-get install libdwarf-dev
+          apt-get install libelf-dev
+          apt-get install libsqlite3-dev
+          apt-get install g++
       - name: Checkout submodules
         run: git submodule update --init --recursive
       - name: Run tests with pytest
