--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,3 +28,7 @@ jobs:
         run: git submodule update --init --recursive
       - name: Run tests with pytest
         run: pytest --cov=src
+      - name: Coveralls
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
